# notion-clerk

./: .dockerignore  .env.example  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  LICENSE  README.md  blueprint.md  custom-notion-agent (1).ipynb  docker-compose.yml  plan.md  project_details.md  pyproject.toml  requirements.txt  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
.streamlit/: config.toml
docs/superpowers/plans/: 2026-04-25-notion-clerk-implementation.md
docs/superpowers/specs/: 2026-04-25-notionagent-redesign.md
notion_clerk/: __init__.py  agent.py  chat_agent.py  config.py  demo_tools.py  prompts.py  tools.py
notion_clerk/.adk/: session.db
tests/: conftest.py  test_chat_agent.py  test_config.py  test_demo_tools.py  test_tools.py
