[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notion-agent"
version = "0.1.0"
description = "Agentic Notion workspace manager using Google ADK"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-adk[a2a]>=1.0.0",
    "a2a-sdk>=0.2.0",
    "google-genai>=1.0.0",
    "httpx>=0.27.0",
    "requests>=2.31.0",
    "python-dateutil>=2.9.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "responses>=0.25.0",
    "ruff>=0.5.0",
]

[project.scripts]
notion-agent = "scripts.run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "integration: marks tests that require live API keys (deselect with '-m not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py310"
